Added - (1 point, variante à 2 pts) Rajouter 2 ou 3 boutons dans la palette pour sélectionner l'épaisseur des traits qui seront dessinés. Variante valant 2 points) Rajouter un glisseur sur la palette permettant de régler l'épaisseur des traits qui seront dessinés.
- (1 point) Rajouter un bouton "Apply" ou "Appliquer" qui change la couleur des traits sélectionnés pour la couleur actuelle de la palette (noir, rouge, vert).

--- a/GTI745_Lab2/nbproject/project.properties
+++ b/GTI745_Lab2/nbproject/project.properties
@@ -29,15 +29,15 @@ dist.jar=${dist.dir}/GTI745_Lab2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.gluegen-rt.jar=lib/gluegen-rt.jar
-file.reference.JNative.jar=lib/JNative.jar
-file.reference.jogl.jar=lib/jogl.jar
+file.reference.gluegen-rt.jar=lib\\gluegen-rt.jar
+file.reference.JNative.jar=lib\\JNative.jar
+file.reference.jogl.jar=lib\\jogl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.JNative.jar}:\
     ${file.reference.gluegen-rt.jar}:\
-    ${file.reference.jogl.jar}:\
-    ${file.reference.JNative.jar}
+    ${file.reference.jogl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
